# -CG-2020-I-

./: CMakeLists.txt  Makefile  cmake_install.cmake  ejercicio01
Ejer2/: CMakeLists.txt  README  TriangleGL.cpp  TriangleGL.h  glad.c
Ejer2/include/glad/: glad.h
Ejer2/lib/: glfw3.lib
Ejercicio1/: CMakeCache.txt
